--- a/public/food.html
+++ b/public/food.html
@@ -525,7 +525,7 @@
   </div>
   <br>
   <div class="c-content">
-    &copy; Copyright SA Coding. All Rights Reserved <br>
+    &copy; Copyright food. All Rights Reserved <br>
     <span>Designed By <a href="#">DIVYA DHARSHINI A</a></span>
   </div>
 </footer>
